--- a/apps/docs/content/components/Section/index.mdx
+++ b/apps/docs/content/components/Section/index.mdx
@@ -8,7 +8,10 @@ a11yReviewed: false
 ---
 
 import {PropTableValues} from '../../../src/components'
-import {SectionPaddingVariants} from '@primer/react-brand'
+import {
+  SectionBackgroundColors,
+  SectionPaddingVariants,
+} from '@primer/react-brand'
 
 ```js
 import {Section} from '@primer/react-brand'
@@ -113,11 +116,11 @@ The default section wraps content in a semantic section element and provides def
 
 ### Section
 
-| name                      | type                                                                     | default    | required | description                                                                                                                                                   |
-| ------------------------- | ------------------------------------------------------------------------ | ---------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `paddingBlockStart`       | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  /> | `'normal'` | `false`  | Control the padding at the top of the section.                                                                                                                |
-| `paddingBlockEnd`         | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  /> | `'normal'` | `false`  | Control the padding at the bottom of the section.                                                                                                             |
-| `backgroundColor`         | `string` \| `string[]`                                                   |            | `false`  | Add a background color.                                                                                                                                       |
-| `backgroundImageSrc`      | `string` \| `string[]`                                                   |            | `false`  | Add one or more background images                                                                                                                             |
-| `backgroundImageSize`     | `string` \| `string[]`                                                   | `'cover'`  | `false`  | Control the size of the background image(s). This accepts all CSS `background-size` supported values, including keywords like `contain`.                      |
-| `backgroundImagePosition` | `string` \| `string[]`                                                   | `'50%`     | `false`  | Control the position of the background image(s). This accepts all CSS `background-position` supported values, including keywords like `top` and edge offsets. |
+| name                      | type                                                                                  | default    | required | description                                                                                                                                                   |
+| ------------------------- | ------------------------------------------------------------------------------------- | ---------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `paddingBlockStart`       | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  />              | `'normal'` | `false`  | Control the padding at the top of the section.                                                                                                                |
+| `paddingBlockEnd`         | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  />              | `'normal'` | `false`  | Control the padding at the bottom of the section.                                                                                                             |
+| `backgroundColor`         | <PropTableValues values={[...SectionBackgroundColors]} commaSeparated  /> \| `string` |            | `false`  | Add a background color.                                                                                                                                       |
+| `backgroundImageSrc`      | `string` \| `string[]`                                                                |            | `false`  | Add one or more background images                                                                                                                             |
+| `backgroundImageSize`     | `string` \| `string[]`                                                                | `'cover'`  | `false`  | Control the size of the background image(s). This accepts all CSS `background-size` supported values, including keywords like `contain`.                      |
+| `backgroundImagePosition` | `string` \| `string[]`                                                                | `'50%`     | `false`  | Control the position of the background image(s). This accepts all CSS `background-position` supported values, including keywords like `top` and edge offsets. |
