Improve docs and stories

--- a/apps/docs/content/components/Section/index.mdx
+++ b/apps/docs/content/components/Section/index.mdx
@@ -21,12 +21,12 @@ import {Section} from '@primer/react-brand'
 
 ### Default
 
-The default section wraps content in a semantic section element and provides default paddings for the content.
+The default section wraps its content in a semantic section element and provides default paddings.
 
 ```jsx live
 <Section>
-  <SectionIntro>
-    <SectionIntro.Heading>Section</SectionIntro.Heading>
+  <SectionIntro align="center">
+    <SectionIntro.Heading size="3">Default section</SectionIntro.Heading>
     <SectionIntro.Description>
       This content is wrapped in a Section component.
     </SectionIntro.Description>
@@ -34,73 +34,111 @@ The default section wraps content in a semantic section element and provides def
 </Section>
 ```
 
-### With custom padding
+### With indepenedent block paddings
 
 ```jsx live
-<>
-  <Section paddingBlockStart="none" paddingBlockEnd="spacious">
-    <SectionIntro>
-      <SectionIntro.Heading>Section</SectionIntro.Heading>
-      <SectionIntro.Description>
-        This section has a custom padding at the top and bottom.
-      </SectionIntro.Description>
-    </SectionIntro>
-  </Section>
-</>
+<Section paddingBlockStart="none" paddingBlockEnd="spacious">
+  <SectionIntro align="center">
+    <SectionIntro.Heading size="3">Custom paddings</SectionIntro.Heading>
+    <SectionIntro.Description>
+      This section has a custom padding at the top and bottom.
+    </SectionIntro.Description>
+  </SectionIntro>
+</Section>
 ```
 
-### With background color
+### With predefined background color
 
 ```jsx live
-<>
-  <Section backgroundColor="var(--brand-color-canvas-inset)">
-    <SectionIntro>
-      <SectionIntro.Heading>Section</SectionIntro.Heading>
-      <SectionIntro.Description>
-        This section has a custom background color.
-      </SectionIntro.Description>
-    </SectionIntro>
-  </Section>
-</>
+<Section backgroundColor="inset">
+  <SectionIntro align="center">
+    <SectionIntro.Heading size="3">Predefined background</SectionIntro.Heading>
+    <SectionIntro.Description>
+      This section has a predefined background color.
+    </SectionIntro.Description>
+  </SectionIntro>
+</Section>
+```
+
+### With custom background color
+
+```jsx live
+<Section backgroundColor="#FFF8F8">
+  <SectionIntro align="center">
+    <SectionIntro.Heading size="3">Custom background</SectionIntro.Heading>
+    <SectionIntro.Description>
+      This section uses a custom background color.
+    </SectionIntro.Description>
+  </SectionIntro>
+</Section>
 ```
 
 ### With background image
 
 ```jsx live
-<>
-  <Section
-    backgroundImageSrc="https://github.com/user-attachments/assets/068634a3-926d-49b8-b949-0b1e2a204651"
-    backgroundImageSize="cover"
-    backgroundImagePosition="top center"
-  >
-    <ThemeProvider colorMode="dark">
-      <Grid>
-        <Grid.Column>
-          <SectionIntro>
-            <SectionIntro.Heading>Section</SectionIntro.Heading>
-            <SectionIntro.Description>
-              This section has a custom background image.
-            </SectionIntro.Description>
-          </SectionIntro>
-        </Grid.Column>
-      </Grid>
-    </ThemeProvider>
-  </Section>
-</>
-```
-
-### Rounded
-
-```jsx live
-<>
+<Section
+  backgroundImageSrc="https://github.com/user-attachments/assets/068634a3-926d-49b8-b949-0b1e2a204651"
+  backgroundImageSize="cover"
+  backgroundImagePosition="top center"
+>
   <ThemeProvider colorMode="dark">
-    <Section backgroundColor="var(--brand-color-canvas-default)"></Section>
-  </ThemeProvider>
-  <Section backgroundColor="var(--brand-color-canvas-default)" rounded>
     <Grid>
       <Grid.Column>
-        <SectionIntro>
-          <SectionIntro.Heading>Section</SectionIntro.Heading>
+        <SectionIntro align="center">
+          <SectionIntro.Heading size="3">Section</SectionIntro.Heading>
+          <SectionIntro.Description>
+            This section has a custom background image.
+          </SectionIntro.Description>
+        </SectionIntro>
+      </Grid.Column>
+    </Grid>
+  </ThemeProvider>
+</Section>
+```
+
+### With multiple background images
+
+```jsx live
+<ThemeProvider colorMode="dark">
+  <Section
+    paddingBlockStart="spacious"
+    paddingBlockEnd="spacious"
+    backgroundColor="default"
+    backgroundImageSrc={[
+      'https://github.com/user-attachments/assets/a7340dea-2076-42da-87a9-057f953beb83',
+      'https://github.com/user-attachments/assets/a28110fd-d019-41a4-8f80-b49ae8895708',
+    ]}
+    backgroundImagePosition={['bottom -1px center', 'center']}
+    backgroundImageSize={['auto', 'cover']}
+  >
+    <SectionIntro align="center">
+      <SectionIntro.Heading size="3" size="3">
+        Multiple background images
+      </SectionIntro.Heading>
+      <SectionIntro.Description>
+        This section uses multiple layered background images.
+      </SectionIntro.Description>
+    </SectionIntro>
+  </Section>
+  <Section backgroundColor="default">
+    <SectionIntro align="center">
+      <SectionIntro.Heading size="4">Another section</SectionIntro.Heading>
+    </SectionIntro>
+  </Section>
+</ThemeProvider>
+```
+
+### With rounded corners
+
+```jsx live
+  <ThemeProvider colorMode="dark">
+    <Section backgroundColor="default"></Section>
+  </ThemeProvider>
+  <Section backgroundColor="default" rounded>
+    <Grid>
+      <Grid.Column>
+        <SectionIntro align="center">
+          <SectionIntro.Heading size="3">Rounded corners</SectionIntro.Heading>
           <SectionIntro.Description>
             This section has rounded top corners that overlap the previous
             section.
@@ -109,7 +147,6 @@ The default section wraps content in a semantic section element and provides def
       </Grid.Column>
     </Grid>
   </Section>
-</>
 ```
 
 ## Component props
@@ -120,7 +157,7 @@ The default section wraps content in a semantic section element and provides def
 | ------------------------- | ------------------------------------------------------------------------------------- | ---------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | `paddingBlockStart`       | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  />              | `'normal'` | `false`  | Control the padding at the top of the section.                                                                                                                |
 | `paddingBlockEnd`         | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  />              | `'normal'` | `false`  | Control the padding at the bottom of the section.                                                                                                             |
-| `backgroundColor`         | <PropTableValues values={[...SectionBackgroundColors]} commaSeparated  /> \| `string` |            | `false`  | Add a background color.                                                                                                                                       |
-| `backgroundImageSrc`      | `string` \| `string[]`                                                                |            | `false`  | Add one or more background images                                                                                                                             |
+| `backgroundColor`         | <PropTableValues values={[...SectionBackgroundColors]} commaSeparated  /> \| `string` |            | `false`  | Add a background color. Use a predefined color, a CSS custom property, or a custom color value.                                                               |
+| `backgroundImageSrc`      | `string` \| `string[]`                                                                |            | `false`  | Add one or more background images.                                                                                                                            |
 | `backgroundImageSize`     | `string` \| `string[]`                                                                | `'cover'`  | `false`  | Control the size of the background image(s). This accepts all CSS `background-size` supported values, including keywords like `contain`.                      |
 | `backgroundImagePosition` | `string` \| `string[]`                                                                | `'50%`     | `false`  | Control the position of the background image(s). This accepts all CSS `background-position` supported values, including keywords like `top` and edge offsets. |
