--- a/apps/docs/content/components/Section/index.mdx
+++ b/apps/docs/content/components/Section/index.mdx
@@ -21,7 +21,7 @@ import {Section} from '@primer/react-brand'
 
 ### Default
 
-The default section wraps its content in a semantic section element and provides default paddings.
+The default `Section` wraps its content in a semantic `<section>` element and provides default paddings.
 
 ```jsx live
 <Section>
