--- a/apps/docs/content/components/Section/index.mdx
+++ b/apps/docs/content/components/Section/index.mdx
@@ -3,7 +3,7 @@ title: Section
 status: Experimental
 source: https://github.com/primer/brand/tree/main/packages/react/src/Section/Section.tsx
 storybook: '/brand/storybook/?path=/story/components-section--default'
-description: Use the section component to create a semantic section in the page and group related content together.
+description: Use the section component to group related content together.
 a11yReviewed: false
 ---
 
