--- a/apps/docs/content/components/IDE.mdx
+++ b/apps/docs/content/components/IDE.mdx
@@ -3,7 +3,7 @@ title: IDE
 status: Experimental
 source: https://github.com/primer/brand/tree/main/packages/react/src/IDE/IDE.tsx
 storybook: '/brand/storybook/?path=/story/components-ide--playground'
-description: Use the IDE to showcase a simulated integrated developer environment, complete with a code editor and AI chat that's intended to enhancing code representation in marketing contexts.
+description: Use the IDE to showcase a simulated integrated developer environment, complete with a code editor and AI chat that's intended to enhance code representation in marketing contexts.
 ---
 
 import {Label} from '@primer/react'
@@ -20,13 +20,13 @@ import {IDE} from '@primer/react-brand'
 
 <Note variant="warning">
 
-The IDE does not automatically apply syntax highlighting to code snippets. Usage of this component in GitHub.com is expected to use the proprietary tokenizer and highlighter, the output of which can be passed directly into IDE as a parameter.
+The `IDE` does not automatically apply syntax highlighting to code snippets. Usage of this component in GitHub.com is expected to use the proprietary tokenizer and highlighter, the output of which can be passed directly into `IDE` as a parameter.
 
 </Note>
 
 <Note variant="info">
 
-See Storybook for examples of IDE using `highlight.js` syntax highlighter.
+See Storybook for examples of `IDE` using `highlight.js` syntax highlighter.
 
 <Link href="https://primer.style/brand/storybook/?path=/story/components-ide--default">
   See syntax highlighter examples
@@ -206,7 +206,7 @@ See Storybook for a comprehensive example of the Chat feature, inclusive of synt
 
 ### Glass variant
 
-A `glass` variant is available to simplify placement of the IDE on background images. This variant adds alpha transparency and background blurring.
+A `glass` variant is available to simplify placement of the `IDE` on background images. This variant adds alpha transparency and background blurring.
 
 ```jsx live
 <Box
